// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormCheckbox captures snapshot of FormCheckBox 1`] = `
<label
  className="ant-checkbox-wrapper"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <span
    className="ant-checkbox ant-checkbox-checked"
    style={Object {}}
  >
    <input
      checked={true}
      className="ant-checkbox-input"
      disabled={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      readOnly={undefined}
      tabIndex={undefined}
      type="checkbox"
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
  <span>
    Checked
  </span>
</label>
`;

exports[`FormCheckbox captures snapshot of FormCheckBox without checkbox 1`] = `
<label
  className="ant-checkbox-wrapper"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <span
    className="ant-checkbox ant-checkbox-checked"
    style={Object {}}
  >
    <input
      checked={true}
      className="ant-checkbox-input"
      disabled={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      readOnly={undefined}
      tabIndex={undefined}
      type="checkbox"
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
</label>
`;
